--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
         <div class="home">
             <div class="negr">
-                <img src="assets/image/negr.png">
+                <img src="assets/image/negr.png" alt=''>
             </div>
             <div class="sight">
 
