--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Castaway</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -28,7 +29,7 @@
         </header>
         <div class="home">
             <div class="negr">
-                <img src="assets/image/negr.png" alt=''>
+                <img src="assets/image/negr.png">
             </div>
             <div class="sight">
 
@@ -268,45 +269,49 @@
                 </div>
             </div>
             <div class="footer__wrapper">
-                <div class="header__menu footer__menu">
-                    <div class="header__menu__item footer__menu__item">
-                        <a href="#">Home</a>
+                <div class="poebota">
+                    <div class="header__menu footer__menu">
+                        <div class="header__menu__item footer__menu__item">
+                            <a href="#">Home</a>
+                        </div>
+                        <div class="header__menu__item footer__menu__item">
+                            <a href="#">Episodes</a>
+                        </div>
+                        <div class="header__menu__item footer__menu__item">
+                            <a href="#">About</a>
+                        </div>
+                        <div class="header__menu__item footer__menu__item">
+                            <a href="#">Contact</a>
+                        </div>
                     </div>
-                    <div class="header__menu__item footer__menu__item">
-                        <a href="#">Episodes</a>
-                    </div>
-                    <div class="header__menu__item footer__menu__item">
-                        <a href="#">About</a>
-                    </div>
-                    <div class="header__menu__item footer__menu__item">
-                        <a href="#">Contact</a>
+                    <div class="footer__list">
+                        <ul>
+                            <li>Style Guide</li>
+                            <li>Instructions</li>
+                            <li>Changelog</li>
+                            <li>Credit</li>
+                            <li>Powered by Webflow</li>
+                            <li>Licenses</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="footer__list">
-                    <ul>
-                        <li>Style Guide</li>
-                        <li>Instructions</li>
-                        <li>Changelog</li>
-                        <li>Credit</li>
-                        <li>Powered by Webflow</li>
-                        <li>Licenses</li>
-                    </ul>
-                </div>
-                <div class="platform__menu  platform__menu__footer">
-                    <div class="platform__menu__item">
-                        <img src="assets/image/spotify.png" alt="">
-                    </div>
-                    <div class="platform__menu__item">
-                        <img src="assets/image/hueta1.png" alt="">
-                    </div>
-                    <div class="platform__menu__item">
-                        <img src="assets/image/hueta2.png" alt="">
-                    </div>
-                    <div class="platform__menu__item">
-                        <img src="assets/image/hueta3.png" alt="">
-                    </div>
-                    <div class="platform__menu__item">
-                        <img src="assets/image/hueta4.png" alt="">
+                <div class="poebota2">
+                    <div class="platform__menu  platform__menu__footer">
+                        <div class="platform__menu__item">
+                            <img src="assets/image/spotify.png" alt="">
+                        </div>
+                        <div class="platform__menu__item">
+                            <img src="assets/image/hueta1.png" alt="">
+                        </div>
+                        <div class="platform__menu__item">
+                            <img src="assets/image/hueta2.png" alt="">
+                        </div>
+                        <div class="platform__menu__item">
+                            <img src="assets/image/hueta3.png" alt="">
+                        </div>
+                        <div class="platform__menu__item">
+                            <img src="assets/image/hueta4.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
