--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="header__logo">
+            <div class="header__logo" onclick="changeSub()">
                 <h2>Castway</h2>
             </div>
             <div class="header__menu">
@@ -166,8 +166,8 @@
             </div>
             
             <div class="subscribe__form">
-                <input type="text">
-                <input type='email' id="email">
+                <input type="text" placeholder="Enter your name">
+                <input type='email' id="email" placeholder="Enter your email">
                 <div class="episodes__btn form__btn">
                     <a href="#">Submit</a>
                 </div>
@@ -258,13 +258,13 @@
                 <div class="footer__logo">Castaway</div>
                 <div class="footer__soclink">
                     <div class="footer__soclink">
-                        <img src="assets/image/insta.png" alt="">
+                        <i class="fa-brands fa-instagram"></i>
                     </div>
                     <div class="footer__soclink">
-                        <img src="assets/image/twit.png" alt="">
+                        <i class="fa-brands fa-twitter"></i>
                     </div>
                     <div class="footer__soclink">
-                        <img src="assets/image/facebook.png" alt="">
+                        <i class="fa-brands fa-facebook"></i>
                     </div>
                 </div>
             </div>
